# semantic-organizer

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  create_office_files.py  create_office_files_fixed.py  create_real_pdfs.py  create_test_data.py  create_themed_test_data.py
semantic_organizer/: __init__.py  __main__.py  analyzer.py  clusterer.py  file_extractors.py  main.py  organizer.py  theme_matcher.py  utils.py
test_input/: auto_repair.txt  photo_tutorial.txt
tests/: __init__.py  run_tests.py  test_analyzer.py  test_file_extractors.py  test_integration.py  test_organizer.py
