[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-file-organizer"
version = "1.0.0"
description = "Automatically organize files by semantic similarity using AI embeddings"
authors = [
    {name = "Semantic Organizer Team", email = "contact@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

# Core dependencies
dependencies = [
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.64.0",
    "python-docx>=0.8.11",
    "pdfplumber>=0.9.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "chardet>=5.1.0",
    "python-magic>=0.4.27",
    "markdown>=3.4.0",
    "hdbscan>=0.8.29",
]

# Optional dependencies for development and testing
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

# For creating real office files in examples
office = [
    "reportlab>=4.0.0",
]

# All optional dependencies
all = [
    "semantic-file-organizer[dev,office]"
]

[project.urls]
Homepage = "https://github.com/example/semantic-file-organizer"
Repository = "https://github.com/example/semantic-file-organizer"
Documentation = "https://github.com/example/semantic-file-organizer#readme"
"Bug Tracker" = "https://github.com/example/semantic-file-organizer/issues"

[project.scripts]
semantic-organizer = "semantic_organizer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["semantic_organizer"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "sklearn.*",
    "pdfplumber.*",
    "docx.*",
    "openpyxl.*",
    "pptx.*",
    "chardet.*",
    "magic.*",
    "reportlab.*",
    "hdbscan.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["semantic_organizer"]
omit = [
    "tests/*",
    "examples/*",
    "semantic_organizer/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]